--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint --ext .tsx --ext .ts src/"
   },
   "dependencies": {
     "react": "17.0.1",
@@ -21,8 +21,11 @@
     "@types/react": "^17.0.15",
     "@types/react-native": "^0.64.12",
     "@types/react-test-renderer": "^17.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.29.0",
+    "@typescript-eslint/parser": "^4.29.0",
     "babel-jest": "^26.6.3",
     "eslint": "7.14.0",
+    "eslint-plugin-react": "^7.24.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
     "react-test-renderer": "17.0.1",
