--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint --ext .tsx --ext .ts src/",
-    "format": "prettier --check ./src",
     "postinstall": "husky install"
   },
   "dependencies": {
     "react": "17.0.1",
-    "react-native": "0.64.2"
+    "react-native": "0.64.2",
+    "prettier-eslint-cli": "4.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -27,13 +27,11 @@
     "@typescript-eslint/parser": "^4.29.0",
     "babel-jest": "^26.6.3",
     "eslint": "7.14.0",
-    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^7.0.1",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
-    "prettier": "^2.3.2",
     "react-test-renderer": "17.0.1",
     "typescript": "^4.3.5"
   },
