chore: Desabilita regra de no unsafe assignment do eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -57,6 +57,7 @@
     ],
     "no-empty-function": "off",
     "@typescript-eslint/no-empty-function": "off",
+    "@typescript-eslint/no-unsafe-assignment": "off",
     "react/display-name": "off",
     "react/prop-types": "off",
     "object-curly-spacing": ["error", "always" ],
