--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "postinstall": "husky install"
   },
   "dependencies": {
+    "prettier-eslint-cli": "4.7.1",
     "react": "17.0.1",
     "react-native": "0.64.2",
-    "prettier-eslint-cli": "4.7.1"
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.1",
+    "redux-saga": "^1.1.3",
+    "typesafe-actions": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -22,7 +26,9 @@
     "@types/jest": "^26.0.24",
     "@types/react": "^17.0.15",
     "@types/react-native": "^0.64.12",
+    "@types/react-redux": "^7.1.18",
     "@types/react-test-renderer": "^17.0.1",
+    "@types/redux-saga": "^0.10.5",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.29.0",
     "babel-jest": "^26.6.3",
